adding all files